crates/cribo/tests/snapshots/test_cli_stdout__stdout_requirements_output.snap
---
source: crates/cribo/tests/test_cli_stdout.rs
expression: stdout
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import dataclasses
import types
import typing
models = types.SimpleNamespace()
models.__name__ = 'models'
utils = types.SimpleNamespace()
utils.__name__ = 'utils'
"""Models package initialization."""
dataclass = dataclasses.dataclass
@dataclass
class User:
    """A simple user model."""
    name: str
    age: int
    email: typing.Optional[str] = None

    def is_adult(self) -> bool:
        """Check if the user is an adult."""
        return self.age >= 18

    def get_display_name(self) -> str:
        """Get a display name for the user."""
        if self.email:
            return f"{self.name} <{self.email}>"
        return self.name
User.__module__ = 'models.user'
"""User model for the test project."""
"""Utils package initialization."""
def greet(name: str) -> str:
    """Greet a person by name."""
    return f"Hello, {name}!"
def calculate(a: typing.Union[int, float], b: typing.Union[int, float]) -> typing.Union[int, float]:
    """Calculate the sum of two numbers."""
    return a + b
"""Utility functions for the test project."""
"""Simple test project entry point."""
def main():
    """Main function."""
    user = User("Alice", 30)
    print(greet(user.name))
    result = calculate(10, 20)
    print(f"Calculation result: {result}")
    print(f"User: {user.name}, Age: {user.age}")
if __name__ == "__main__":
    main()
